# PythonProfilingCode

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: conf.py  history.md  readme.md  usage.md
src/PythonProfilingCode/: __init__.py  cli.py
src/modules/profilingCode/concatenation/: avoiddoublequotecheckbad.py  avoiddoublequotecheckgood.py  avoidlistcomprehensioniniterationsbad.py  avoidlistcomprehensioniniterationsgood.py  methodejoin1.py  methodejoin2.py  methodejoin3.py
tests/: __init__.py  conftest.py
tests/concatenation/: test_concatenation.py
