[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonProfilingCode"
version = "0.1.0"
description = "Collection of Python scripts for testing performance profiling tools"
readme = "README.rst"
authors = [
  {name = "Antoine Meheut", email = "github.contacts@protonmail.com"}
]
maintainers = [
  {name = "Antoine Meheut", email = "github.contacts@protonmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/AntoineMeheut/PythonProfilingCode/issues"
changelog = "https://github.com/AntoineMeheut/PythonProfilingCode/blob/master/changelog.md"
homepage = "https://github.com/AntoineMeheut/PythonProfilingCode"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

